test/parse/expr/bad-localset-no-value.txt
;;; TOOL: wat2wasm
;;; ERROR: 1
(module (func
  (local i32)
  local.set 0))
(;; STDERR ;;;
out/test/parse/expr/bad-localset-no-value.txt:5:3: error: type mismatch in local.set, expected [i32] but got []
  local.set 0))
  ^^^^^^^^^
;;; STDERR ;;)
